<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tabLayout"
        app:tabIndicatorColor="#ff5959"
        app:tabTextAppearance="@style/MyCustomTabText"
        android:background="#dbf1f2">

        <android.support.design.widget.TabItem
            android:text="@string/tab_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TabLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp"
            card_view:cardUseCompatPadding="true"
            android:id="@+id/jaipur">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/jaipur" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image1"
                    android:layout_alignParentEnd="true"
                    card_view:cardBackgroundColor="@color/transparent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="15dp"
                    card_view:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/place1"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:typeface="serif" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/spring" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image3"
                    android:layout_alignParentRight="true"
                    card_view:cardBackgroundColor="@color/transparent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="15dp"
                    card_view:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/place3"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:typeface="serif" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hari2" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image"
                    android:layout_alignParentRight="true"
                    card_view:cardBackgroundColor="@color/transparent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="15dp"
                    card_view:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/place2"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:typeface="serif" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chennai1" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image2"
                    android:layout_alignParentRight="true"
                    card_view:cardBackgroundColor="@color/transparent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="15dp"
                    card_view:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/place4"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:typeface="serif" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>

</LinearLayout>